# simple-video-viewer

./: .gitignore  Makefile  Makefile.am  README  configure.ac  svv.c  wayland-backend.c  wayland-backend.h
